css/styles.css
body {
  font-family: Lato, sans-serif;
  background-color: #f0f0f0;
}

header {
  height: 3rem;
  display: flex;
  align-items: center;
  font-family: Lato, sans-serif;
  background-color: #562b80;
  color: white;
}

.nav-bar {
  display: flex;
  align-items: flex-end;
}

.nav-tab {
  padding-bottom: 0;
  margin: 0 1rem 0 0;
}

main {
  margin: 0;
}

h3 {
  font-weight: 400;
  margin: auto 0;
}

.entries-header,
.title-header {
  display: flex;
  justify-content: space-between;
}

.entries-header {
  margin: 0;
}

.new-entry-button {
  height: 100%;
  margin: auto 0;
}

.title-header {
  margin-top: 0.5rem;
}

a,
button {
  cursor: pointer;
}

img {
  width: 100%;
  object-fit: cover;
  height: 33vh;
  border-radius: 0.3rem;
}

.fa-solid {
  color: #562b80;
  margin: auto 0;
}

label {
  display: flex;
  flex-direction: column;
  margin: 1rem 0;
  font-weight: 700;
}

label.column-full {
  margin: 0;
}

input,
textarea {
  border: 1px solid lightgray;
  font-size: 1rem;
  padding: 0.5rem;
  border-radius: 0.3rem;
  margin-top: 0.5rem;
  font-family: inherit;
}

input:focus,
textarea:focus {
  outline: none;
  border: 2px solid #562b80;
}

.submit {
  text-align: right;
  margin: 1.5rem 0;
}

button,
.new-entry-button {
  background-color: #562b80;
  color: white;
  border-radius: 0.3rem;
  padding: 0.5rem;
  border: none;
  font-size: 1rem;
}

ul {
  padding: 0;
}

li {
  list-style: none;
  padding-bottom: 0.5rem;
}

h4 {
  margin: 0;
}

@media screen and (min-width: 768px) {
  h1,
  h3 {
    padding: 0 0.75rem;
  }

  label {
    margin-top: 0;
  }

  img {
    height: 40vh;
  }

  .entries-header {
    padding-right: 0.75rem;
  }
}

